# SciArticle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  environment.yml  pyproject.toml  ruff.toml  run_polling.py  run_tests.sh  start.sh
app/: celery_app.py
app/tasks/: task.py
docs/: ТЗ от SciArticle продукт SciSource v2.docx
infra/: .env.example  Dockerfile  Dockerfile.celery  Dockerfile.redis  docker-compose.yml  docker-entrypoint.sh
infra/initdb/: init-django-user.sql
src/: celery.py  celery_app.py  config.py  database.py  entrypoint.sh  manage.py  tasks.py
src/api/: serializers.py  tasks.py  urls.py  views.py
src/bot/: __init__.py  admin.py  apps.py  bot.py  models.py  services.py  signals.py  tasks.py
src/bot/handlers/: callback_handlers.py  doi_request.py  file_handlers.py  start.py
src/bot/hendlers/: callback_handlers.py  doi_request.py  file_handlers.py  help.py
src/bot/migrations/: 0001_initial.py  0002_alter_chatuser_telegram_id.py  0003_request_request_message_id.py  0004_alter_request_request_message_id.py  0005_remove_request_request_message_id_request_message_id_and_more.py
src/common/: celery_app.py  config.py  tasks.py
src/hendlers/: main.py
src/migrations/: env.py
src/models/: models.py
src/sciarticle/: __init__.py  asgi.py  constants.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  settings.py  test_bot.py  test_callback_handlers.py  test_file_handlers.py  test_models.py  test_tasks.py
