[project]
name = "sciarticle"
version = "0.1.0"
description = ""
authors = [
    {name = "I. Tkachenko", email = "i.tkachenko@zohomail.eu"},
    {name = "DmitryBurmagin",email = "dmitryodinov@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-telegram-bot (>=22.0,<23.0)",
    "docker (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

